# traffic-generator

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  aliases.h  application.cpp  application.h  formatter.h  generate_version_info.sh  main.cpp  precompiled.h  traffic_generator.cfg  version_info.h
app/: application.cpp  application.h
app/priv/: config.cpp  config.h
cfg/: config.cpp  config.h
dpdk/: spsc_ring.h
log/: log.h  tg_log.h
mgmt/: gen_cfg.cpp  gen_cfg.h  gen_config.cpp  gen_config.h  manager.cpp  manager.h  messages.h  stats.h
mgmt/priv/: http_server.cpp  http_server.h
put/: ether_addr.cpp  ether_addr.h  file_utils.h  fun_ref.h  functional.h  mem_utils.h  num_utils.h  pkt_utils.h  spsc_ring.h  stacktrace.cpp  stacktrace.h  string_utils.h  system_error.h  tg_assert.h  throw.h  time_utils.h  visit.h
tools/: dpdk-setup.sh  xdump
